tests/ui/error-codes/E0779.stderr
error: `[instruction_set]` attribute argument should be valid
  --> $DIR/E0779.rs:1:1
   |
LL | #[instruction_set(arm::magic)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

